Improve track editor with Three.js

--- a/editor.html
+++ b/editor.html
@@ -73,6 +73,8 @@
         </div>
         <button id="applyBtn">Apply</button>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="src/js/Track.js"></script>
     <script src="src/js/TrackEditor.js"></script>
 </body>
 </html>
