--- a/editor.html
+++ b/editor.html
@@ -75,6 +75,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="src/js/Track.js"></script>
+    <script src="src/js/GameEngine.js"></script>
     <script src="src/js/TrackEditor.js"></script>
 </body>
 </html>
