--- a/editor.html
+++ b/editor.html
@@ -76,6 +76,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="src/js/Track.js"></script>
     <script src="src/js/AudioManager.js"></script>
+    <script src="src/js/Powerup.js"></script>
     <script src="src/js/GameEngine.js"></script>
     <script src="src/js/TrackEditor.js"></script>
 </body>
