--- a/index.html
+++ b/index.html
@@ -66,6 +66,23 @@
         #stats div {
             margin: 5px 0;
         }
+
+        #aiStats {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            background: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 15px;
+            border-radius: 5px;
+            font-size: 14px;
+            font-family: monospace;
+            z-index: 100;
+        }
+
+        #aiStats div {
+            margin: 5px 0;
+        }
         
         .hidden {
             display: none !important;
@@ -88,6 +105,8 @@
             <div>Lap: <span id="lap">1/3</span></div>
             <div>Powerup: <span id="powerup">None</span></div>
         </div>
+
+        <div id="aiStats" class="hidden"></div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
