Load Explosion without require

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
     <script src="src/js/AudioManager.js"></script>
     <script src="src/js/NeuralNetwork.js"></script>
     <script src="src/js/Kart.js"></script>
+    <script src="src/js/Explosion.js"></script>
     <script src="src/js/Powerup.js"></script>
     <script src="src/js/Track.js"></script>
     <script src="src/js/AIController.js"></script>
