--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
             overflow: hidden;
             background: #000;
             font-family: Arial, sans-serif;
+            min-width: 600px;
+            min-height: 600px;
         }
         
         #gameContainer {
