Add a checkbox control for music playback.

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
             <div>Position: <span id="position">1st</span></div>
             <div>Lap: <span id="lap">1/3</span></div>
             <div>Powerup: <span id="powerup">None</span></div>
+            <div>Music: <input type="checkbox" id="musicToggle" checked></div>
         </div>
 
         <div id="aiStats" class="hidden"></div>
