--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
             <div>Lap: <span id="lap">1/3</span></div>
             <div>Powerup: <span id="powerup">None</span></div>
             <div>Music: <input type="checkbox" id="musicToggle" checked></div>
+            <div>Music Volume: <input type="range" id="musicVolume" min="0" max="1" step="0.01" value="0.3"></div>
+            <div>SFX Volume: <input type="range" id="sfxVolume" min="0" max="1" step="0.01" value="0.5"></div>
         </div>
 
         <div id="aiStats" class="hidden"></div>
