--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="src/js/AudioManager.js"></script>
+    <script src="src/js/webgl-matrix-multiply.js"></script>
     <script src="src/js/NeuralNetwork.js"></script>
     <script src="src/js/Kart.js"></script>
     <script src="src/js/Explosion.js"></script>
