Add support for dragging obstacles in track editor.

--- a/editor.html
+++ b/editor.html
@@ -50,6 +50,7 @@
     <canvas id="editorCanvas" width="800" height="600"></canvas>
     <textarea id="exportArea" placeholder="Exported JSON"></textarea>
     <div id="propertyWindow" class="hidden">
+        <h3 id="obstacleIndex"></h3>
         <div>
             <label>X: <input id="prop_x" type="number"></label>
         </div>
