Add track selector.

--- a/index.html
+++ b/index.html
@@ -96,8 +96,13 @@
         
         <div id="startScreen">
             <h1>Kartio</h1>
-            <p>It's a me, a racist stereotype!</p>
-            <p>Click to start</p>
+            <p>Select a track and start the race!</p>
+            <select id="trackSelector">
+                <option value="circuit">Circuit</option>
+                <option value="desert">Desert</option>
+                <option value="snow">Snow</option>
+            </select>
+            <button id="startGameButton">Start Game</button>
         </div>
         
         <div id="stats" class="hidden">
